--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
+    "animate.css": "^4.1.1",
+    "axios": "^1.7.2",
     "core-js": "^3.37.1",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
